--- a/index.html
+++ b/index.html
@@ -638,7 +638,10 @@
             <div class="container">
                 <h2 class="section-title">צור קשר</h2>
                 <p>מוכנים להתחיל? צרו איתנו קשר עוד היום ונשמח לעזור לכם להתחבר למפעלים המובילים בתחום שלכם.</p>
-                <a href="mailto:info@gpi-connect.com" class="cta-button">שלח הודעה</a>
+                <a href="mailto:zevi1706@gmail.com" class="cta-button"> שלח הודעה באיימל </a>
+
+                <a href="https://wa.me/972553072352?text=שלום%20אני%20רוצה%20לשאול%20שאלה" class="cta-button" target="_blank">שלח הודעה לווצאפ</a>
+
             </div>
         </section>
     </main>
@@ -739,11 +742,6 @@
     </script>
 </body>
 </html>
-
-
-
-
-
 
 
 
