--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             <h3 class="factory-name">TechnoElectro Ltd.</h3>
                             <p class="factory-location">טייוואן</p>
                             <p class="factory-description">מתמחה בייצור רכיבים אלקטרוניים מתקדמים. מוביל בחדשנות טכנולוגית.</p>
-                            <a href="#" class="contact-factory">יצירת קשר</a>
+                            <a href="MT.html" class="contact-factory">יצירת קשר</a>
                         </div>
                     </div>
                     <div class="factory-card">
