--- a/MT.html
+++ b/MT.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="theme-color" content="#2c3e50">
 <title>יצירת קשר - TechnoElectro Ltd.</title>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap');
