--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 <h2 class="section-title">מפעלים מובילים</h2>
                 <div class="factory-grid">
                     <div class="factory-card">
-                        <div class="factory-image" style="background-image: url('https://source.unsplash.com/800x600/?factory,electronics');"></div>
+                        <div class="factory-image" style="background-image: url('https://th.bing.com/th/id/OIP.gG6XQnJhm3h4OhOzxs73mQHaDo?rs=1&pid=ImgDetMain');"></div>
                         <div class="factory-info">
                             <h3 class="factory-name">TechnoElectro Ltd.</h3>
                             <p class="factory-location">טייוואן</p>
