--- a/MT.html
+++ b/MT.html
@@ -287,7 +287,7 @@
     <div class="side-menu">
         <span class="close-menu">✕</span>
         <ul>
-            <li><a href="#hero">ראשי</a></li>
+            <li><a href="index.html">ראשי</a></li>
             <li><a href="#about">אודות</a></li>
             <li><a href="#categories">קטגוריות</a></li>
             <li><a href="#factories">מפעלים</a></li>
