--- a/index.html
+++ b/index.html
@@ -536,12 +536,12 @@
                         </div>
                     </div>
                     <div class="factory-card">
-                        <div class="factory-image" style="background-image: url('https://source.unsplash.com/800x600/?textile,factory');"></div>
+                        <div class="factory-image" style="background-image: url('https://th.bing.com/th?id=OIP.o5AsTCAW3lW7FIUbEVMucQHaE8&w=306&h=204&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2');"></div>
                         <div class="factory-info">
                             <h3 class="factory-name">EcoTextiles</h3>
                             <p class="factory-location">הודו</p>
                             <p class="factory-description">ייצור טקסטיל איכותי מחומרים אורגניים. מחויבות לקיימות ואחריות חברתית.</p>
-                            <a href="#" class="contact-factory">יצירת קשר</a>
+                            <a href="MO.html" class="contact-factory">יצירת קשר</a>
                         </div>
                     </div>
                     <div class="factory-card">
