--- a/index.html
+++ b/index.html
@@ -545,12 +545,12 @@
                         </div>
                     </div>
                     <div class="factory-card">
-                        <div class="factory-image" style="background-image: url('https://source.unsplash.com/800x600/?automotive,factory');"></div>
+                        <div class="factory-image" style="background-image: url('https://th.bing.com/th?id=OIP.CpqisEu8s_XAElThcJ1TdgAAAA&w=319&h=195&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2');"></div>
                         <div class="factory-info">
                             <h3 class="factory-name">AutoParts Global</h3>
                             <p class="factory-location">גרמניה</p>
                             <p class="factory-description">ייצור חלקי רכב מתקדמים. מובילים בתחום הרכב החשמלי והאוטונומי.</p>
-                            <a href="#" class="contact-factory">יצירת קשר</a>
+                            <a href="MG.html" class="contact-factory">יצירת קשר</a>
                         </div>
                     </div>
                     <div class="factory-card">
