--- a/MA.html
+++ b/MA.html
@@ -322,7 +322,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">NutriFood Inc.</div>
+            <div class="logo">GPI</div>
             <div class="menu-toggle">☰</div>
         </nav>
     </header>
