--- a/MT.html
+++ b/MT.html
@@ -349,22 +349,22 @@
                     <h3>גלריית מוצרים</h3>
                     <div class="gallery">
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?microchip" alt="מיקרו-שבב מתקדם">
+                            <img src="https://page-images.websim.ai/%D7%9E%D7%99%D7%A7%D7%A8%D7%95-%D7%A9%D7%91%D7%91%20%D7%9E%D7%AA%D7%A7%D7%93%D7%9D_1024x1024xVPBFBcfhTYBtEjbPwxc39e5c412f1fd.jpg" alt="מיקרו-שבב מתקדם">
                         </div>
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?sensor" alt="חיישן חכם">
+                            <img src="https://page-images.websim.ai/%D7%97%D7%99%D7%99%D7%A9%D7%9F%20%D7%97%D7%9B%D7%9D_1024x1024xVPBFBcfhTYBtEjbPwxb3b692255c708.jpg" alt="חיישן חכם">
                         </div>
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?display" alt="מסך גמיש">
+                            <img src="https://page-images.websim.ai/%D7%9E%D7%A1%D7%9A%20%D7%92%D7%9E%D7%99%D7%A9_1024x1024xVPBFBcfhTYBtEjbPwxb841500df201c.jpg" alt="מסך גמיש">
                         </div>
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?battery" alt="סוללה בעלת קיבולת גבוהה">
+                            <img src="https://replicate.delivery/yhqm/JRyDR8p9adKeRyj9EVKrnQZjrvTO2flW85pHBir5HLnqCPWTA/out-0.webp" alt="סוללה בעלת קיבולת גבוהה">
                         </div>
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?circuit" alt="לוח מעגלים מודפס">
+                            <img src="https://page-images.websim.ai/%D7%9C%D7%95%D7%97%20%D7%9E%D7%A2%D7%92%D7%9C%D7%99%D7%9D%20%D7%9E%D7%95%D7%93%D7%A4%D7%A1_1024x1024xVPBFBcfhTYBtEjbPwx428eebe3f0fe2.jpg" alt="לוח מעגלים מודפס">
                         </div>
                         <div class="gallery-item">
-                            <img src="https://source.unsplash.com/400x300/?robotic" alt="רכיב רובוטי">
+                            <img src="https://page-images.websim.ai/%D7%A8%D7%9B%D7%99%D7%91%20%D7%A8%D7%95%D7%91%D7%95%D7%98%D7%99_1024x1024xVPBFBcfhTYBtEjbPwx8877e5ea4dc5.jpg" alt="רכיב רובוטי">
                         </div>
                     </div>
                 </div>
