--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <a href="#">שאלות נפוצות</a>
                 <a href="#">בלוג</a>
                 <a href="#">קריירה</a>
-                <a href="#">שותפים</a>
+                <a href="n.html">ניסוי</a>
             </div>
             <p>&copy; 2023 GPI - Global Products Industries Connect. כל הזכויות שמורות.</p>
         </div>
