--- a/n.html
+++ b/n.html
@@ -210,28 +210,29 @@ footer {
     </style>
     <!-- הוספת Firebase -->
     <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
-      import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+  // ייבוא הפונקציות הנדרשות מה-SDK של Firebase
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+  import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
 
-      // Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
-        authDomain: "gpi0-d1e6d.firebaseapp.com",
-        databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
-        projectId: "gpi0-d1e6d",
-        storageBucket: "gpi0-d1e6d.appspot.com",
-        messagingSenderId: "138797690477",
-        appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
-        measurementId: "G-DP0JJ2FX3D"
-      };
+  // תצורת Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
+    authDomain: "gpi0-d1e6d.firebaseapp.com",
+    databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
+    projectId: "gpi0-d1e6d",
+    storageBucket: "gpi0-d1e6d.appspot.com",
+    messagingSenderId: "138797690477",
+    appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
+    measurementId: "G-DP0JJ2FX3D"
+  };
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
-      const database = getDatabase(app);
-    </script>
+  // אתחול Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const database = getDatabase(app);
+</script>
+
 </head>
 <body>
     <header>
