--- a/n.html
+++ b/n.html
@@ -7,22 +7,24 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
         import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
 
-        // Firebase configuration
+        // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
-            authDomain: "gpi0-d1e6d.firebaseapp.com",
-            databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
-            projectId: "gpi0-d1e6d",
-            storageBucket: "gpi0-d1e6d.appspot.com",
-            messagingSenderId: "138797690477",
-            appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
-            measurementId: "G-DP0JJ2FX3D"
+            apiKey: "AIzaSyClZ1teRfieU-zEW7h_Bzk6Lv0i_OX8_yE",
+            authDomain: "nnnnn-56b4f.firebaseapp.com",
+            databaseURL: "https://nnnnn-56b4f-default-rtdb.firebaseio.com",
+            projectId: "nnnnn-56b4f",
+            storageBucket: "nnnnn-56b4f.appspot.com",
+            messagingSenderId: "691389167330",
+            appId: "1:691389167330:web:e56534a0f57947089050bb",
+            measurementId: "G-MQSL6T4XW5"
         };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
         const database = getDatabase(app);
 
         // פונקציה לטיפול בשליחת הטופס
@@ -55,7 +57,7 @@
     <h2>טופס פרטי קשר</h2>
     <form onsubmit="submitForm(event)">
         <div>
-            <label for="first-name">שם פרטי:</label>
+            <label for="first-name">שם     י פרטי:</label>
             <input type="text" id="first-name" required>
         </div>
         <div>
