--- a/n.html
+++ b/n.html
@@ -12,14 +12,14 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyClZ1teRfieU-zEW7h_Bzk6Lv0i_OX8_yE",
-            authDomain: "nnnnn-56b4f.firebaseapp.com",
-            databaseURL: "https://nnnnn-56b4f-default-rtdb.firebaseio.com",
-            projectId: "nnnnn-56b4f",
-            storageBucket: "nnnnn-56b4f.appspot.com",
-            messagingSenderId: "691389167330",
-            appId: "1:691389167330:web:e56534a0f57947089050bb",
-            measurementId: "G-MQSL6T4XW5"
+            apiKey: "AIzaSyCt7rn1_hQ53Nw3_zEG6NHJK_k8_WCxnOQ",
+            authDomain: "nnnnn-eab3a.firebaseapp.com",
+            databaseURL: "https://nnnnn-eab3a-default-rtdb.firebaseio.com",
+            projectId: "nnnnn-eab3a",
+            storageBucket: "nnnnn-eab3a.appspot.com",
+            messagingSenderId: "991598507522",
+            appId: "1:991598507522:web:6582f02e05845a5383191b",
+            measurementId: "G-C37B9FH1HJ"
         };
 
         // Initialize Firebase
@@ -57,7 +57,7 @@
     <h2>טופס פרטי קשר</h2>
     <form onsubmit="submitForm(event)">
         <div>
-            <label for="first-name">שם     י פרטי:</label>
+            <label for="first-name">שם פרטי:</label>
             <input type="text" id="first-name" required>
         </div>
         <div>
