--- a/n.html
+++ b/n.html
@@ -9,7 +9,7 @@
     <h2>טופס פרטי קשר</h2>
     <form onsubmit="submitForm(event)">
         <div>
-            <label for="first-name">שם פרטי:</label>
+            <label for="first-name">שם 1פרטי:</label>
             <input type="text" id="first-name" required>
         </div>
         <div>
